src/snapshots/zeek_lsp__lsp__test__resolve_initializer.snap
---
source: src/lsp.rs
assertion_line: 1351
expression: "super::resolve(&db, node, None, uri)"

---
Some(
    Decl {
        module: None,
        id: "f",
        fqid: "x::X::f",
        kind: Variable,
        is_export: None,
        range: Range {
            start: Position {
                line: 1,
                character: 17,
            },
            end: Position {
                line: 1,
                character: 18,
            },
        },
        selection_range: Range {
            start: Position {
                line: 1,
                character: 17,
            },
            end: Position {
                line: 1,
                character: 18,
            },
        },
        documentation: "```zeek\n# In x::X\nf: count &optional;\n```",
        uri: Url {
            scheme: "file",
            cannot_be_a_base: false,
            username: "",
            password: None,
            host: None,
            port: None,
            path: "/x.zeek",
            query: None,
            fragment: None,
        },
    },
)
