src/snapshots/zeek_lsp__lsp__test__symbol-2.snap
---
source: src/lsp.rs
assertion_line: 878
expression: "query(\"mod\").await"

---
Ok(
    Some(
        [
            SymbolInformation {
                name: "mod_a::A",
                kind: Variable,
                tags: None,
                deprecated: None,
                location: Location {
                    uri: Url {
                        scheme: "file",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: None,
                        port: None,
                        path: "/p1/a.zeek",
                        query: None,
                        fragment: None,
                    },
                    range: Range {
                        start: Position {
                            line: 0,
                            character: 14,
                        },
                        end: Position {
                            line: 0,
                            character: 27,
                        },
                    },
                },
                container_name: Some(
                    "mod_a",
                ),
            },
            SymbolInformation {
                name: "mod_b::B",
                kind: Variable,
                tags: None,
                deprecated: None,
                location: Location {
                    uri: Url {
                        scheme: "file",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: None,
                        port: None,
                        path: "/p2/b.zeek",
                        query: None,
                        fragment: None,
                    },
                    range: Range {
                        start: Position {
                            line: 0,
                            character: 14,
                        },
                        end: Position {
                            line: 0,
                            character: 27,
                        },
                    },
                },
                container_name: Some(
                    "mod_b",
                ),
            },
            SymbolInformation {
                name: "mod_x::X",
                kind: Variable,
                tags: None,
                deprecated: None,
                location: Location {
                    uri: Url {
                        scheme: "file",
                        cannot_be_a_base: false,
                        username: "",
                        password: None,
                        host: None,
                        port: None,
                        path: "/x/x.zeek",
                        query: None,
                        fragment: None,
                    },
                    range: Range {
                        start: Position {
                            line: 0,
                            character: 14,
                        },
                        end: Position {
                            line: 0,
                            character: 27,
                        },
                    },
                },
                container_name: Some(
                    "mod_x",
                ),
            },
        ],
    ),
)
