src/snapshots/zeek_lsp__lsp__test__symbol-3.snap
---
source: src/lsp.rs
assertion_line: 1065
expression: "query(\"A\").await"

---
Ok(
    Some(
        [],
    ),
)
