src/snapshots/zeek_lsp__lsp__test__symbol-4.snap
---
source: src/lsp.rs
assertion_line: 1066
expression: "query(\"X\").await"

---
Ok(
    Some(
        [],
    ),
)
