src/snapshots/zeek_lsp__lsp__test__symbol-5.snap
---
source: src/lsp.rs
assertion_line: 1067
expression: "query(\"F\").await"

---
Ok(
    Some(
        [],
    ),
)
