src/snapshots/zeek_lsp__lsp__test__symbol.snap
---
source: src/lsp.rs
assertion_line: 1063
expression: "query(\"\").await"

---
Ok(
    Some(
        [],
    ),
)
